# noteable-notebook-magics

./: .gitignore  CHANGELOG.md  Makefile  README.md  buf.gen.yaml  buf.yaml  pyproject.toml  setup.cfg  tox.ini
.github/: pull_request_template.md
.github/actions/setup-cockroachdb/: action.yaml
.github/workflows/: main.yaml
noteable/: __init__.py  command.py  data_loader.py  datasource_postprocessing.py  datasources.py  ntbl.py  util.py
noteable/datasets/: impl.py
noteable/planar_ally_client/: api.py  types.py
noteable/sql/: LICENSE  __init__.py  connection.py  magic.py  meta_commands.py  run.py  sqlalchemy.py  types.py
noteable/sql/sqlalchemy/: __init__.py  utils.py
noteable_magics/: __init__.py  data_loader.py  datasource_postprocessing.py  datasources.py  git_service.py  logging.py  ntbl.py  s3_sidecar_service.py  util.py
noteable_magics/planar_ally_client/: __init__.py  api.py  errors.py  types.py
noteable_magics/proto_src/s3/v1/: sidecar.proto
noteable_magics/sql/: column_guesser.py  connection.py  gate_messaging_types.py  magic.py  meta_commands.py  parse.py  run.py
tests/: conftest.py  test_connection.py  test_data_loader.py  test_datasources.py  test_ntbl.py  test_sql_connection.py  test_sql_init_package.py  test_sql_magic.py  test_sql_magic_meta_commands.py  test_sql_types.py  test_sqlalchemy_connections.py
tests/planar_ally_client/: test_api.py
