[tool.poetry]
authors = ["Eli Wilson <eli@noteable.io>"]
description = "IPython Magics for Noteable"
name = "noteable_magics"
version = "2.0.0"

[tool.poetry.dependencies]
GitPython = "^3.1.30"
httpx = {extras = ["http2"], version = "^0.23.0"}
backoff = "^2.2.1"
click = "^8.0.4" # pinned until black is updated to not use internal module that was removed by click in 8.1.0; https://github.com/psf/black/issues/2964
ipython = {extras = ["kernel"], version = "^8.6.0"}
openpyxl = "^3.0.7"
pandas = "^1.3.5"
pyarrow = "^6.0.1" # Snowflake driver wants 6.0.X series as of June 2022.
pydantic = "^1.9.1"
python = "^3.8"
rich = "10.13.0"  # Upgrading breaks progress bars
unidiff = "^0.6.0"
xlrd = "^2.0.1"
numpy = "^1.22.2"
prettytable = "^3.3.0"
structlog = "^22.1.0"
SQLAlchemy = "1.4.25" # sqlalchemy-bigquery prevents upgrading, https://lightrun.com/answers/googleapis-python-bigquery-sqlalchemy-support-sqlalchemy-1428
sqlparse = "^0.4.2"
jinjasql = "^0.1.8"
Jinja2 = ">=2.5,<3.0" # jinja2 >= 3.0 breaks jinjasql.
MarkupSafe = "<2.1.0" # 2.1.0 and beyond breaks jinja2
# datasource drivers.
duckdb-engine = "^0.6.4"
redshift-connector = {version = "2.0.908"}
sqlalchemy-redshift = {version = "0.8.11"}
google-cloud-bigquery-storage = "2.6.3"
psycopg2-binary = {version = "2.9.5"}
snowflake-sqlalchemy = {version = "1.3.4"}
sqlalchemy-bigquery = {version = "1.4.4", python = ">=3.8,<3.11"}
sqlalchemy-databricks = {version = "0.2.0"}
trino = {version = "0.313.0", extras = ["sqlalchemy"]}
greenlet = "^1.1.3"
sqlalchemy-cockroachdb = "^1.4.4"
pyathena = {extras = ["sqlalchemy"], version = "^2.18.1"}
pymysql = "^1.0.2"


[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest-cov = "^2.12.0"
pytest-mock = "^3.6.1"
pytest-timeout = "^1.4.2"
setuptools = "^65.3.0"
tox = "^3.23.1"
managed-service-fixtures = "^0.1.5"
requests-mock = "^1.10.0"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 100
skip-string-normalization = true

[tool.isort]
include_trailing_comma = true
known_third_party = ["nbformat"]
line_length = 100
multi_line_output = 3
