[tool.poetry]
authors = ["Eli Wilson <eli@noteable.io>"]
description = "IPython Magics for Noteable"
name = "noteable"
version = "2.0.0"

[tool.poetry.dependencies]
GitPython = "^3.1.30"
httpx = {extras = ["http2"], version = "^0.23.0"}
backoff = "^2.2.1"
click = "^8.0.4" # pinned until black is updated to not use internal module that was removed by click in 8.1.0; https://github.com/psf/black/issues/2964
ipython = {extras = ["kernel"], version = "^8.10.0"}
openpyxl = "^3.0.7"
pandas = "^1.5.3"
pydantic = "^1.9.1"
python = "^3.8"
rich = "13.2.0"
unidiff = "^0.6.0"
xlrd = "^2.0.1"
prettytable = "^3.3.0"
structlog = "^22.1.0"
# One or more datasource drivers are not ready for SQLA 2.0.
SQLAlchemy = "<=2.0.0"
# snowflake 1.4.4 demands "please install a version that adheres to: 'pyarrow<8.1.0,>=8.0.0; extra == "pandas"'"
pyarrow = {extras = ["pandas"], version=">=8.0.0,<8.1.0"}
sqlparse = "^0.4.4"
# Alternative build of JinjaSQL that's Jinja3 compatible. Up until
# https://github.com/sripathikrishnan/jinjasql/pull/53 gets merged, anyway
# (Note: Check this periodically. Last checked Jan 27, 2023.)
jinjasql = {git = "https://github.com/yakhu/jinjasql.git", rev = "f8c62d1bea97d0320bb3676f4f83bd2357ccfe55"}
#
# datasource drivers.
duckdb-engine = "^0.6.4"
psycopg2 = {version = "2.9.5"}
redshift-connector = {version = "2.0.910"}
sqlalchemy-redshift = {version = "0.8.12"}
google-cloud-bigquery-storage = "2.6.3"
snowflake-sqlalchemy = {version = "1.4.7"}
sqlalchemy-bigquery = {version = "1.5.0", python = ">=3.8,<3.11"}
sqlalchemy-databricks = {version = "0.2.0"}
trino = {version = "0.313.0", extras = ["sqlalchemy"]}
greenlet = "^1.1.3"
sqlalchemy-cockroachdb = "^1.4.4"
pyathena = {extras = ["sqlalchemy"], version = "^2.18.1"}
# original mysql / maraiadb / singlesource datasources use this (slower, inferior) pure python driver ...
pymysql = {version = "1.0.2"}
# But newer created  mysql / maraiadb ones (post Ghana 2023 release) will use this C-based driver.
mysqlclient = {version = "2.1.1"}
# And singlesource will be using this explicit dialect.
sqlalchemy-singlestoredb = {version = "0.2.0"}
# Use clickhouse-sqlalchemy==0.2.3 for now since 0.2.4 requires greenlet >= 2.0.1 for async support
# which conflicts with the greenlet version required above.
clickhouse-sqlalchemy = {version = "0.2.3"}
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest-cov = "^2.12.0"
pytest-mock = "^3.6.1"
pytest-timeout = "^1.4.2"
setuptools = "^65.3.0"
tox = "^3.23.1"
managed-service-fixtures = "^0.1.5"
requests-mock = "^1.10.0"
safety = "^2.3.5"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 100
skip-string-normalization = true

[tool.isort]
include_trailing_comma = true
known_third_party = ["nbformat"]
line_length = 100
multi_line_output = 3
